# trade-tariff-reference

./: .coveragerc  .flake8  .gitignore  Dockerfile  Pipfile  Procfile  README.md  babel.config.js  compile_assets.sh  conftest.py  development.txt  docker-compose.yml  generate_documents.sh  import_db.sh  install_node.sh  manage.py  manifest.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_tests.sh  sample.env  setup.sh  start.sh  start_cf.sh  webpack-stats-prod.json  webpack-stats.json  webpack.base.config.js  webpack.local.config.js  webpack.prod.config.js
.circleci/: config.yml
config/: __init__.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  local.py  production.py  testing.py
docs/: DEPLOYMENT_README.md  RELEASE_PROCEDURE_README.md
scripts/: compile_assets.sh  generate_documents.sh  import_db.sh  setup.sh  start.sh  start_cf.sh
sql/: .gitignore  document_database_views.sql  goods_nomenclature_export.sql  goods_nomenclature_export_brexit.sql  measures_real_end_dates.sql
static/: package-lock.json  package.json
static/css/: custom.css  global.css  global.sass
static/documents/: israel_annex.docx
static/js/: index.js
trade_tariff_reference/account/: urls.py  views.py
trade_tariff_reference/api/: apps.py  serializers.py  urls.py  views.py
trade_tariff_reference/core/: admin.py  apps.py  formatter.py  middleware.py  router.py  urls.py  utils.py  views.py
trade_tariff_reference/documents/: apps.py  database.py  functions.py  history.py  tasks.py  utils.py
(+466 files in other folders)
